<resources>
    <string name="app_name">FireBell</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="FireBell_logo_description">FireBell logo</string>
    <string name="setting_address_desc">Current Address:</string>
    <string name="setting_address_placeholder">Address appears here</string>
    <string name="setting_button_text">Update</string>
    <string name="settings_push_notf">Push Notification</string>
    <string name="sett_phone_alarm">Phone Alarm Alert</string>
    <string name="title_activity_maps_homepage">Map</string>
    <string name="pref_file_key">FireBellPreference</string>
    <string name="pref_address_key">user_address</string>
    <string name="pref_notifications_key">user_notifications</string>
    <string name="pref_alarm_key">user_alarm</string>
    <string name="default_address">69 Bikini drive, San Andreas</string>
    <string name="enter_your_address">Enter your address</string>
    <string name="set_address_button_text">GO</string>
    <string name="title_activity_map">Map</string>
    <string name="title_activity_status">status</string>
    <string name="SmokeJSONKey">smoke</string>
    <string name="news_URL">http://www.mfb.vic.gov.au/News.html</string>
    <string name="emergency_tel_link">tel:000</string>
    <string name="retrieveURL">http://13.72.243.229/retrieve_loc.php</string>
</resources>
